Clean up the .gitignore, no need to specify every sub-folder for these files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,13 @@
 # This is a confidential file from PRH
-YTJ-API/https_api_tietopalvelu_ytj_fi_yritystiedot.wsdl
+https_api_tietopalvelu_ytj_fi_yritystiedot.wsdl
 
-# These contain user specific variables
-YTJ-API/.env
-YTJ-API/.env.live
-YTJ-API/.env.local
-
-# This is a confidential file from PRH
-ipr/https_api_tietopalvelu_ytj_fi_yritystiedot.wsdl
-
-# These contain user specific variables
-ipr/.env
-ipr/.env.live
-ipr/.env.local
+# These contain user specificand sensitive information
+.env
+.env.live
+.env.local
 
 # We don't want test data files to git repo
-**/*.xls
-**/*.xlsx
-**/*.csv
-ipr/.streamlit/secrets.toml
+*.xls
+*.xlsx
+*.csv
+secrets.toml
